vest-dsl/test/bad/array_len_unbound.vest
foo = {
  a: u8,
  b: u32,
}

fmt = {
  b: [foo; @a],
}
